# asrcpp-gigam3

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .iwyu.imp  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.cuda  README.md  cmake_test_discovery_e0d6af8fed.json  tsan_suppressions.txt
client/: main.js.map  package.json
client/src/: audio.test.ts  audio.ts  main.ts  protocol.ts  realtime-client.test.ts  realtime-client.ts
client/src/web/: app.ts  audio-capture.ts  audio-processor.js  build.ts  bundler.ts  dev.ts  file-upload.ts  index.html  logger.ts  realtime.ts  styles.css  transcription-api.test.ts  transcription-api.ts  types.ts  ui.ts  visualizer.ts
docs/: QUALITY.md
include/asr/: audio.h  config.h  executor.h  handler.h  json_utils.h  logging.h  metrics.h  offline_transcription.h  realtime_session.h  recognizer.h  server.h  span.h  string_utils.h  vad.h  whisper_api.h
models/sherpa-onnx-nemo-transducer-punct-giga-am-v3-russian-2025-12-16/: decoder.onnx  encoder.int8.onnx  joiner.onnx  test-onnx-rnnt.py  tokens.txt
scripts/: check-all.sh  cppcheck.sh  format.sh  iwyu.sh  lint.sh  test-presets.sh
src/: audio.cpp  config.cpp  executor.cpp  handler.cpp  main.cpp  metrics.cpp  offline_transcription.cpp  realtime_session.cpp  recognizer.cpp  server.cpp  vad.cpp  whisper_api.cpp
src/audio/: base64.cpp  decode.cpp  pcm.cpp  realtime_opus.cpp  resampler.cpp
static/: app.js  app.js.map  audio-processor.js  index.html
tests/: CMakeLists.txt  bench_alloc.cpp  bench_decisions.cpp  test_audio.cpp  test_config.cpp  test_executor.cpp  test_handler.cpp  test_integration.cpp  test_logging.cpp  test_metrics.cpp  test_offline_transcription.cpp  test_realtime_session.cpp  test_recognizer.cpp  test_vad.cpp  test_whisper_api.cpp
